@@ -1,4 +1,8 @@
 2015-05-28 Giuseppe Salamanna <salaman AT cern.ch>
+	* Moved to using theta() from TrackParticle class to 
+	compute lepton z0sinTh
+	
+2015-05-28 Giuseppe Salamanna <salaman AT cern.ch>
 	* Wrap2 et al. now use std::function.  This means you can use capturing lambdas
 	to define variables (Peter).
 	* Added some  more muon variables, among which quality flags
